k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beacon
  labels:
    app: project-beacon
    environment: development
