k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beacon-service
  namespace: beacon
  labels:
    app: beacon-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
  selector:
    app: beacon-app
